Canvas now fits full screen kind of

--- a/worldmaker.html
+++ b/worldmaker.html
@@ -4,6 +4,6 @@
 <script src="generator.js"></script>
 </head>
 <body>
-  <canvas width=600 height=450 id="canvas"></canvas>
+  <canvas width=inherit height=auto id="canvas"></canvas>
 </body>
 </html>
