Removing body margin

--- a/worldmaker.html
+++ b/worldmaker.html
@@ -3,7 +3,7 @@
 <title>World Maker</title>
 <script src="generator.js"></script>
 </head>
-<body>
+<body style="margin:0">
   <canvas width=inherit height=auto id="canvas" onclick="mouse(event)"></canvas>
   <script>
     initCanvas();
